--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/matthewcv/ufo-sightings-angular1.git"
+    "url": "git+https://github.com/matthewcv/ufo-sightings-http-api.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/matthewcv/ufo-sightings-angular1/issues"
+    "url": "https://github.com/matthewcv/ufo-sightings-http-api/issues"
   },
-  "homepage": "https://github.com/matthewcv/ufo-sightings-angular1#readme",
+  "homepage": "https://github.com/matthewcv/ufo-sightings-http-api#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "morgan": "^1.7.0"
+    "hbs": "^4.0.0",
+    "morgan": "^1.7.0",
+    "odata-parser": "^1.2.1",
+    "q-sqlite3": "^0.1.3",
+    "sqlite3": "^3.1.2"
   }
 }
