--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/matthewcv/ufo-sightings-http-api#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "hbs": "^4.0.0",
     "morgan": "^1.7.0",
     "odata-parser": "^1.2.1",
     "q-sqlite3": "^0.1.3",
     "sqlite3": "^3.1.2"
+  },
+  "devDependencies": {
+    "expect": "^1.16.0",
+    "mocha": "^2.4.5",
+    "rewire": "^2.5.1"
   }
 }
